--- a/blog_hydi/templates/index.html
+++ b/blog_hydi/templates/index.html
@@ -2,7 +2,7 @@
 {% block context %}
     <div  class=" item" onclick="location.href='{{ url_for("post",id=i)}}'">
         <div class="item_info">
-            {{ entries.update }} / {{ entries.tag }}
+            {{ entries.up_date }} / {{ entries.tag }}
         </div>
         <div class="item_title">
             {{ entries.title }}
