--- a/blog_hydi/templates/edit.html
+++ b/blog_hydi/templates/edit.html
@@ -6,7 +6,15 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/blogPage.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <script>
+        {% for msg in messages %}
+        alert({{ msg }})
+        {% endfor %}
+    </script>
+    {% endif %}
+{% endwith %}
 </head>
 <body>
 {#context#}
