写好了搜索

--- a/blog_hydi/templates/layout.html
+++ b/blog_hydi/templates/layout.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div id="header">
-<a id="cate_all" class="active">主页</a>
+
     {% block header %}
         {% endblock %}
 
@@ -20,6 +20,7 @@
 <div id="sider">
     <div class="serachBar">
         搜索：<input id="search" >
+        <button class="btn search_btn" onclick="location.href='/s/post/'+document.getElementById('search').value">搜索</button>
     </div>
 <div class="login_btn btn">
         登陆
