--- a/blog_hydi/templates/layout.html
+++ b/blog_hydi/templates/layout.html
@@ -19,12 +19,10 @@
 </div>
 <div id="sider">
     <div class="serachBar">
-        搜索：<input id="search" >
+        <input id="search" >
         <button class="btn search_btn" onclick="location.href='/s/post/'+document.getElementById('search').value">搜索</button>
     </div>
-<div class="login_btn btn">
-        登陆
-        </div>
+
     {% block sider %}
 
     {% endblock %}
