--- a/blog_hydi/templates/index.html
+++ b/blog_hydi/templates/index.html
@@ -14,11 +14,12 @@
 {% endfor %}
 {% endblock %}
 {% block context %}
+    {% if entries %}
     {% for entrie in entries %}
 
     <div  class=" item" onclick="location.href='{{ url_for("post",id=entrie.id)}}'">
         <div class="item_info">
-            {{ entrie.up_date }} / {{ entrie.category.name }}
+            {{ entrie.up_date.strftime('%Y-%m-%d-%H:%M') }} / {{ entrie.category.name }}
         </div>
         <div class="item_title">
             {{ entrie.title }}
@@ -30,7 +31,40 @@
     {% endif %}
     </div>
     {% endfor %}
+    {% endif %}
+    {% if cates %}
+        {% for cate in cates %}
+    <div  class=" item" >
+        <div class="item_info">
+            {{ cate.up_date.strftime('%Y-%m-%d-%H:%M') }}
+        </div>
+        <div class="item_title">
+            <input id="{{ cate.id }}" value="{{ cate.name }}">
+        </div>
+        <div class="item_info">
+            <a onclick="location.href='/edit/category/update/{{ cate.id }}/'+document.getElementById('{{ cate.id }}').value">保存</a>
+            /<a onclick="location.href='/edit/category/delete/{{ cate.id }}'">删除</a>
+        </div>
+    </div>
+        {% endfor %}
+    {% endif %}
 
+    {% if tags %}
+        {% for tag in tags %}
+    <div  class=" item" >
+        <div class="item_info">
+            {{ tag.up_date.strftime('%Y-%m-%d-%H:%M') }}
+        </div>
+        <div class="item_title">
+            <input id="{{ tag.id }}" value="{{ tag.name }}">
+        </div>
+        <div class="item_info">
+            <a onclick="location.href='/edit/tag/update/{{ tag.id }}/'+document.getElementById('{{ tag.id }}').value">保存</a>
+            /<a onclick="location.href='/edit/tag/delete/{{ tag.id }}'">删除</a>
+        </div>
+    </div>
+        {% endfor %}
+    {% endif %}
 
 
 {% endblock %}
@@ -41,18 +75,27 @@
     </div>
     {% if 'logged_in' in session %}
     <div class="edit_menu" >
-        <div class="add_btn btn" onclick="location.href='{{ url_for('add') }}'">
+        <div class="user_info">
+            登陆
+        </div>
+        <span class="add_btn btn" onclick="location.href='{{ url_for('add') }}'">
             添加
-        </div>
-        <div class="add_btn btn" onclick="location.href='{{ url_for('logout') }}'">
+        </span>
+        <span class="add_btn btn" onclick="location.href='{{ url_for('edit_other', name="category") }}'">
+            编辑类别
+        </span>
+        <span class="add_btn btn" onclick="location.href='{{ url_for('edit_other', name="tag") }}'">
+            编辑标签
+        </span>
+        <span class="add_btn btn" onclick="location.href='{{ url_for('logout') }}'">
             退出
-        </div>
+        </span>
     </div>
         {% else %}
         <div class="login">
         <form action="{{ url_for("login") }}" method="post">
             用户名：<input name="username" >
-            密码：<input name="password">
+            密码：<input type="password" name="password">
             <input type="submit" value='登陆'>
             {% for message in get_flashed_messages() %}
                 <div class=flash>{{ message }}</div>
